--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "minecraft-data": "^3.76.0",
     "mineflayer": "^4.22.0",
     "mineflayer-collectblock": "^1.4.1",
