--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mineflayer-collectblock": "^1.4.1",
     "mineflayer-pathfinder": "^2.4.5",
     "mineflayer-pvp": "^1.3.2",
-    "prismarine-viewer": "^1.28.0"
+    "prismarine-viewer": "^1.28.0",
+    "uuid": "^11.0.2",
+    "vectordb": "^0.12.0"
   }
 }
